    - Lava Centrifuge technology (requires lava-science-pack + advanced-circuit)
    - Rare Mineral Extraction technology (requires lava-centrifuge + uranium-processing)
    - Tungsten from Lava technology (Space Age only, requires lava-centrifuge + tungsten-steel)
  Bugfixes:
    - Fixed Concentrated Ore Extraction recipe appearing in "unsorted" section (added subgroup)
  Changes:
    - Lava Mech Armor movement speed penalty reduced from 90% to 80%
    - Removed entire Enchanting system (Enchanter machine, enchanted trains, circuit enchanting)
    - Removed Enchanted Lava, Fusioning Lava, Stronger Fusioning Lava fluids
    - Removed Base Magma Ball item
    - Removed all enchanting recipes and technologies
    - Enchanted Science Pack kept but simplified: now requires lava + multiple science packs
    - Enchanted Science Pack technology now requires lava-science-pack and chemical-science-pack
---------------------------------------------------------------------------------------------------
Version: 0.0.28
Date: 2026-01-12
  Changes:
    - Artillery shell recipe reworked for Vulcanus: calcite replaced with sulfur (10) + coal (10) + lava (500)
    - Artillery shell crafting time reduced from 15s to 10s
    - Radar recipe changed to batch production: 500 electronic-circuit + 100,000 lava -> 100 radars
    - Railgun turret recipe now requires 100 lava
  Features:
    - Added new Explosives from Lava recipe (Vulcanus only): 2 sulfur + 2 coal + 100 lava -> 2 explosives
    - Explosives from Lava recipe unlocked by explosives technology
---------------------------------------------------------------------------------------------------
Version: 0.0.27
Date: 2026-01-10
  Features:
    - Added "Foundation Exhaustion" technology that disables foundation-platform-nauvis recipe
    - Technology triggers after crafting 5,000 foundations (craft-item trigger)
    - Prerequisite: foundation-platform-productivity-30
  Changes: